--- a/service-marketing.html
+++ b/service-marketing.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Marketing - Prime</title>
-  <meta name="description" content="Marketing - service details.">
-  <meta name="keywords" content="">
+  <title>Effective Marketing Solutions for Small Businesses | Prime</title>
+  <meta name="description" content="Discover how to enhance your small business website with our expert web design services and targeted SEO strategies. At Prime, we help you create a website for your business that boosts brand awareness and drives conversions. Contact us today to learn more about our website design and marketing solutions tailored for your needs.">
+  <meta name="keywords" content="marketing, small business marketing, website design, branding, SEO optimization, custom website design, content creation, social media integration, email marketing campaigns, online presence, web design services, business growth, SEO best practices, search engine optimization, digital marketing, LSI keywords, website performance, user-friendly websites, marketing solutions">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -107,25 +107,55 @@
           </div>
 
           <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <img src="assets/img/service/service-marketing.jpg" alt="" class="img-fluid services-img">
+            <h3>Marketing</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Marketing is essential in modern business, especially when it comes to creating a small business website or improving
+              <a href="service-web-design.html">website design</a> for small business. It helps companies connect with their audience, drive brand awareness, and boost
+              sales. By integrating <a href="service-web-design.html">website design</a> and marketing, businesses can effectively communicate their value and increase
+              their reach, helping to build long-lasting relationships with customers, whether you're creating a website for your
+              business or expanding your online presence.
+            </p>
+            <p>
+              <a href="service-branding.html">Branding</a> and <a href="service-web-design.html">website design</a> are key components of an effective marketing strategy. Together, they ensure consistency in
+              messaging across all digital touchpoints, which is vital for building brand recognition and trust. At Prime, we not only
+              focus on creating visually compelling websites but also incorporate branding and marketing elements that drive
+              engagement and build long-term relationships with your audience. By seamlessly integrating your brand's identity into
+              your small business website, we help you communicate your values consistently, making your marketing efforts more
+              effective.
+            </p>
+            <h3>Marketing Solutions</h3>
+            <p>
+              Prime can offer many marketing solutions for small businesses. For example:
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Custom Website Design. We create a unique website that reflects your brand and supports your marketing goals.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>SEO Optimization. We enhance your online visibility with search engine-friendly website development to attract more visitors.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Branding and Website Design. We believe that strong branding and cohesive web design helps build trust and credibility.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Content Creation. We write content, from blogs to product descriptions, that aligns with your marketing strategy.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Social Media Integration. We connect your business website design and social platforms for a unified digital presence.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Email Marketing Campaigns. We collect leads directly from your website for your business and run targeted email campaigns to increase conversions.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Web Design and Marketing. We combine website design services with comprehensive marketing strategies to support business growth.</span></li>
+              <li><i class="bi bi-check-circle"></i><span>Analytics and Reporting. We can track your website’s performance and adjust your marketing efforts with our analytics and reporting tools.</span></li>
             </ul>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              To reach your target audience, you need a well-designed website and a solid online marketing plan. Part of that plan is
+              making sure your website not only looks good but also ranks well in search engines. This is where SEO and content
+              marketing come in. SEO and content marketing are powerful tools for boosting a small business's online presence and
+              attracting more customers. Search engine optimization (SEO) involves optimizing your website to rank higher on search
+              engines like Google. It helps improve visibility by ensuring that your small business website appears when users search
+              for relevant keywords. Content marketing plays a crucial role here, offering valuable information that addresses your
+              audience's needs while incorporating the right keywords to improve rankings. We use modern SEO techniques, including LSI
+              keywords, to make your website more visible and engaging to your target audience. With high-quality content aligned with
+              SEO best practices, we ensure your website performs well in search rankings, driving more traffic and conversions.
             </p>
+            <h3>Contact Us</h3>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
-            </p>
-            <p>-------------</p>
-            <p>
-              Consistent online growth of a business is a base part of delivering products to the highest range of customers.
+              Our team combines creativity with technical knowledge to ensure your website stands out. We focus on user-friendly
+              designs that engage visitors and meet your business goals. With our professional guidance, you can trust that every
+              aspect of your website is crafted with precision, from layout to functionality, ensuring a seamless experience for your
+              users. If you want to improve your online presence with quality web design at affordable prices, <a href="/#contact">contact us</a> at Prime.
+              We're here to help you bring your vision to life!
             </p>
           </div>
 
