--- a/portfolio-car-navigation-system.html
+++ b/portfolio-car-navigation-system.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Car navigation system - Prime</title>
-  <meta name="description" content="Car navigation system - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Car Navigation System Design for Mobile Applications | Prime</title>
+  <meta name="description" content="Discover Prime's expertise in the design of car navigation systems for mobile applications. Our web development services focus on creating user-friendly solutions that provide real-time GPS tracking and route optimization. Partner with us to elevate your mobile navigation experience today!">
+  <meta name="keywords" content="car navigation systems, mobile applications, GPS tracking, route optimization, user-friendly interfaces, web development services, intuitive navigation solutions, driving experience, mobile application design, advanced navigation features">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -126,7 +126,19 @@
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Car navigation system</h2>
               <p>
-                Design of a car navigation system for a mobile application.
+                At Prime, we specialize in the design of car navigation systems tailored for mobile applications. Our expertise in web
+                development services extends to creating intuitive and user-friendly navigation solutions that enhance the driving
+                experience.
+              </p>
+              <p>
+                Our team focuses on delivering a comprehensive mobile application that offers real-time GPS tracking, route
+                optimization, and user-friendly interfaces. We understand the importance of integrating advanced features that ensure
+                accuracy and reliability in navigation, making it easier for users to reach their destinations.
+              </p>
+              <p>
+                By partnering with Prime, you can expect a mobile application that not only meets industry standards but also stands out
+                in the competitive market. Let us help you create a website for your business that complements your navigation system,
+                providing users with a seamless experience.
               </p>
             </div>
           </div>
