--- a/portfolio-payment-cards.html
+++ b/portfolio-payment-cards.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Payment cards - Prime</title>
-  <meta name="description" content="Payment cards - portfolio details.">
-  <meta name="keywords" content="">
+  <title>3D Design and Modeling of Payment Cards | Prime</title>
+  <meta name="description" content="Explore Prime's expertise in 3D design and modeling of payment cards for payment service presentations. Our creative team delivers visually stunning designs that enhance brand identity and user experience. Partner with us to elevate your payment service presentation today!">
+  <meta name="keywords" content="3D design, modeling, payment cards, payment services, web development, advanced graphics, animations, user experience, visual identity, design solutions, brand representation, competitive market, professional design, business strategy">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,21 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Payment cards</h2>
+              <h2>3D Design and Modeling of Payment Cards</h2>
               <p>
-                3D design and modeling of payment cards for a presentation of a payment service.
+                At Prime, we specialize in the 3D design and modeling of payment cards tailored for the presentation of payment
+                services. Our experienced team utilizes cutting-edge techniques to create visually stunning and functional designs that
+                effectively represent your brand.
+              </p>
+              <p>
+                Our web development services include the integration of advanced graphics and animations to enhance the user experience.
+                By focusing on the aesthetics and functionality of payment cards, we ensure that they stand out in a competitive market,
+                making a lasting impression on users.
+              </p>
+              <p>
+                Partner with Prime to elevate your payment service presentation with our professional design solutions. Let us help you
+                create a compelling visual identity that resonates with your target audience and enhances your overall business
+                strategy.
               </p>
             </div>
           </div>
