--- a/portfolio-stock-exchange.html
+++ b/portfolio-stock-exchange.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Stock exchange - Prime</title>
-  <meta name="description" content="Stock exchange - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Website Development for Stock Exchange Platforms | Prime</title>
+  <meta name="description" content="Discover Prime's web development services for enhancing your existing stock exchange platform. Our team specializes in design and development, providing seamless integration of new features and functionality with your web services. Elevate your small business website today with our expert solutions!">
+  <meta name="keywords" content="design and development, small business website, stock exchange platform design, stock exchange platform development, web development for stock exchange, integration of stock exchange platforms, stock exchange system enhancements, web services integration, stock exchange platform support, web design for small businesses, stock exchange platform features, operational efficiency in stock exchange, platform improvement services, web development">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -130,7 +130,18 @@
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Stock exchange</h2>
               <p>
-                Design and development of a stock exchange platform. Support and integration of new features. Integration functionality of the stock exchange to other web services of the company.
+                At Prime, we specialize in the design and development of stock exchange platforms that are tailored to enhance existing
+                systems. Our team is dedicated to providing web development services that focus on the support and integration of new
+                features, ensuring your platform remains competitive and efficient.
+              </p>
+              <p>
+                We understand the importance of seamless functionality. That's why we offer integration functionality of the stock
+                exchange with other web services within your company. This cohesive approach allows for improved operational efficiency
+                and a better experience for users.
+              </p>
+              <p>
+                Partner with Prime to enhance your stock exchange platform and ensure it meets the evolving needs of your business. With
+                our expertise in web design for small businesses, we're here to help you take your platform to the next level.
               </p>
             </div>
           </div>
